WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168237
Regression(
r211455
): ASSERTION FAILED: frameView || pageCacheState() == InPageCache in com.apple.WebCore: WebCore::Document::destroyRenderTree
https://bugs.webkit.org/show_bug.cgi?id=168237
Summary
Regression(r211455): ASSERTION FAILED: frameView || pageCacheState() == InPag...
Chris Dumez
Reported
2017-02-13 11:13:50 PST
ASSERTION FAILED: frameView || pageCacheState() == InPageCache Source/WebCore/dom/Document.cpp(2243) : void WebCore::Document::destroyRenderTree() 1 0x10e377c3d WTFCrash 2 0x11650ff9d WebCore::Document::destroyRenderTree() 3 0x11651083d WebCore::Document::prepareForDestruction() 4 0x11607cea9 WebCore::CachedFrame::destroy() 5 0x11608df69 WebCore::CachedPage::~CachedPage() 6 0x11608e055 WebCore::CachedPage::~CachedPage() 7 0x117b9153c WebCore::PageCache::prune(WebCore::PruningReason) 8 0x117b913c3 WebCore::PageCache::pruneToSizeNow(unsigned int, WebCore::PruningReason) 9 0x1181eb748 WebCore::Settings::setUsesPageCache(bool) 10 0x109555fb8 WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner(WebKit::WebPageGroupProxy*, WTF::String const&, bool) 11 0x109f53d6f WKBundleOverrideBoolPreferenceForTestRunner 12 0x1137fd080 WTR::TestRunner::overridePreference(OpaqueJSString*, OpaqueJSString*) 13 0x1137f6793 WTR::JSTestRunner::overridePreference(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) 14 0x10ddd1ad7 long long JSC::APICallbackFunction::call<JSC::JSCallbackFunction>(JSC::ExecState*) 15 0x10df63f9a JSC::LLInt::handleHostCall(JSC::ExecState*, JSC::Instruction*, JSC::JSValue, JSC::CodeSpecializationKind) 16 0x10df5fe1d JSC::LLInt::setUpCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind, JSC::JSValue, JSC::LLIntCallLinkInfo*) 17 0x10df5f0e3 JSC::LLInt::genericCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind) 18 0x10df5efd3 llint_slow_path_call 19 0x10df6d283 llint_entry 20 0x10df65b5e vmEntryToJavaScript 21 0x10dd75ed9 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 22 0x10dd2b5ef JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 23 0x10d554238 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 24 0x10d554349 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 25 0x10d5545dd JSC::profiledCall(JSC::ExecState*, JSC::ProfilingReason, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 26 0x116f12cdb WebCore::JSMainThreadExecState::profiledCall(JSC::ExecState*, JSC::ProfilingReason, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 27 0x1171ab379 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext*, WebCore::Event*) 28 0x1166fda56 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener>, 1ul, WTF::CrashOnOverflow, 16ul>) 29 0x1166fd707 WebCore::EventTarget::fireEventListeners(WebCore::Event&) 30 0x117b386c4 WebCore::Node::handleLocalEvents(WebCore::Event&) 31 0x1166c9feb WebCore::EventContext::handleLocalEvents(WebCore::Event&) const
Attachments
Patch
(1.75 KB, patch)
2017-02-13 11:31 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-02-13 11:14:21 PST
<
rdar://problem/30494165
>
Chris Dumez
Comment 2
2017-02-13 11:31:03 PST
Created
attachment 301364
[details]
Patch
Chris Dumez
Comment 3
2017-02-13 11:31:42 PST
CachedFrame::destroy(): m_document->setPageCacheState(Document::NotInPageCache); m_document->prepareForDestruction();
Chris Dumez
Comment 4
2017-02-13 12:21:01 PST
Comment on
attachment 301364
[details]
Patch Clearing flags on attachment: 301364 Committed
r212238
: <
http://trac.webkit.org/changeset/212238
>
Chris Dumez
Comment 5
2017-02-13 12:21:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug