Regression(r211455): ASSERTION FAILED: frameView || pageCacheState() == InPageCache in com.apple.WebCore: WebCore::Document::destroyRenderTree https://bugs.webkit.org/show_bug.cgi?id=168237 <rdar://problem/30494165>

Reviewed by Gavin Barraclough.

Drop bad assertion under document::destroyRenderTree() that was introduced in r211455.
The assertion seemed like a good idea but the issue is that CachedFrame::destroy()
reset's the document's pageCacheState before calling Document::prepareForDestruction().

No new tests, this fixes assertion hits on our bots.

* dom/Document.cpp:
(WebCore::Document::destroyRenderTree):

Canonical link: https://commits.webkit.org/185274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212238 268f45cc-cd09-0410-ab3c-d52691b4dbfc